--- a/src/styles.css
+++ b/src/styles.css
@@ -321,3 +321,14 @@ body {
   background-color: #e9ecef;
   border-color: var(--primary-color);
 }
+
+.code-block-link.active {
+  background-color: var(--primary-color);
+  color: white;
+  border-color: var(--primary-color);
+  border-style: solid;
+}
+
+.code-block-link.active:hover {
+  background-color: #236bce;
+}
